--- a/src/Demo.Token.Based.Auth.Owin.Web.Api/Demo.Token.Based.Auth.Owin.Web.Api.csproj
+++ b/src/Demo.Token.Based.Auth.Owin.Web.Api/Demo.Token.Based.Auth.Owin.Web.Api.csproj
@@ -132,6 +132,8 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\OrdersController.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -147,7 +149,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Controllers\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
