*Installed Structuremap MVC nuget packages Injecting certain objects using constructor injection

--- a/src/Demo.Token.Based.Auth.Owin.Web.Api.Repository/Demo.Token.Based.Auth.Owin.Web.Api.Repository.csproj
+++ b/src/Demo.Token.Based.Auth.Owin.Web.Api.Repository/Demo.Token.Based.Auth.Owin.Web.Api.Repository.csproj
@@ -46,6 +46,14 @@
       <HintPath>..\packages\Microsoft.AspNet.Identity.EntityFramework.2.2.1\lib\net45\Microsoft.AspNet.Identity.EntityFramework.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="StructureMap, Version=3.1.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\structuremap.3.1.1.134\lib\net40\StructureMap.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="StructureMap.Net4, Version=3.1.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\structuremap.3.1.1.134\lib\net40\StructureMap.Net4.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -60,6 +68,7 @@
     <Compile Include="AuthenticationContext.cs" />
     <Compile Include="AuthenticationRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RepositoryRegistry.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
