--- a/src/Demo.Token.Based.Auth.Owin.Web.Api.Repository/packages.config
+++ b/src/Demo.Token.Based.Auth.Owin.Web.Api.Repository/packages.config
@@ -3,4 +3,5 @@
   <package id="EntityFramework" version="6.1.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
+  <package id="structuremap" version="3.1.1.134" targetFramework="net452" />
 </packages>
